[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/BasicEnemy.gd" type="Script" id=2]
[ext_resource path="res://scripts/BasicEnemySM.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 32.5 )

[sub_resource type="Animation" id=5]
resource_name = "Swing"
length = 5.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29, 28 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21, 10 )

[node name="BasicEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -58, -13 )
enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Swing = SubResource( 5 )
anims/move = SubResource( 2 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -63, -1 )
shape = SubResource( 3 )

[node name="AttackDetector" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( -55, 0 )
shape = SubResource( 4 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
